--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "twig/twig": "^2.12",
         "firebase/php-jwt": "^5.0",
         "twig/extensions": "^1.5",
-        "fortawesome/font-awesome": "^5.11"
+        "fortawesome/font-awesome": "^5.11",
+        "mathsgod/alt-app-core": "^1.1"
     }
 }
