--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "firebase/php-jwt": "^5.0",
         "twig/extensions": "^1.5",
         "fortawesome/font-awesome": "^5.11",
-        "mathsgod/alt-app-core": "^1.1"
+        "mathsgod/alt-app-core": "^1.1",
+        "symfony/yaml": "^3.4"
     }
 }
