--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,8 @@
         "symfony/yaml": "^3.4",
         "mathsgod/html": "^1.0",
         "mathsgod/p-query": "^2.0",
-        "mathsgod/r-graphql": "^1.3"
+        "mathsgod/r-graphql": "^1.3",
+        "mathsgod/hl-holiday": "^1.2",
+        "mathsgod/hl-weather": "^2.0"
     }
 }
