--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,10 @@ username=root
 password=111111
 database=raymond
 
+[system]
+user_default_acl=0
+update_source=https://raymond2.hostlink.com.hk/cms4_source/
+
 [language]
 en=English
 zh-hk=中文
