--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,9 @@
         "mathsgod/r-graphql": "^1.3",
         "mathsgod/hl-holiday": "^1.2",
         "mathsgod/hl-weather": "^2.0"
+    },
+    "require-dev": {
+        "box/spout": "^2.7",
+        "phpunit/phpunit": "^6.5"
     }
 }
