--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "mathsgod/r-graphql": "^1.3",
         "mathsgod/hl-holiday": "^1.2",
         "mathsgod/hl-weather": "^2.0",
-        "mathsgod/r-translate": "^1.0"
+        "mathsgod/r-translate": "^1.0",
+        "mathsgod/gql-php-generator": "^1.0"
     },
     "require-dev": {
         "box/spout": "^2.7",
