--- a/config.ini
+++ b/config.ini
@@ -18,9 +18,8 @@ company=HostLink
 2-step verification = 0
 2-step verification white list = null
 
-roxy_fileman=0
-roxy_fileman_path=/uploads
-;roxy_fileman_width=300
+hostlink-fileman-server=
+hostlink-fileman-key=
 
 footer_content=
 
