--- a/config.ini
+++ b/config.ini
@@ -51,3 +51,12 @@ rt2-responsive=1
 development=1
 
 auth-lockout=1
+
+
+[hostlink-fileman]
+url=http://192.168.88.108:8081
+upload_path=http://127.0.0.1/uploads
+key=test1234
+api=http://127.0.0.1/hostlink-fileman/api/
+root=
+basepath=/uploads
