--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Raymond framework",
   "main": "src/index.js",
   "dependencies": {
+    "http-vue-loader": "^1.4.2",
     "webpack": "^4.41.2",
     "x-html-bs4": "git+https://github.com/mathsgod/x-html-bs4.git"
   },
