--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "http-vue-loader": "^1.4.2",
+    "sweetalert2": "^9.10.0",
     "webpack": "^4.41.2",
     "x-html-bs4": "git+https://github.com/mathsgod/x-html-bs4.git"
   },
