--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "element-ui": "^2.13.1",
+    "file-loader": "^6.0.0",
     "http-vue-loader": "^1.4.2",
     "sweetalert2": "^9.10.0",
     "webpack": "^4.41.2",
@@ -14,8 +15,10 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.1.4",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
