--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "file-loader": "^6.0.0",
     "http-vue-loader": "^1.4.2",
     "sweetalert2": "^9.10.0",
+    "vue-i18n": "^8.17.3",
     "webpack": "^4.41.2",
     "x-html-bs4": "git+https://github.com/mathsgod/x-html-bs4.git"
   },
