--- a/pages/Fileman/alt-fileman/package.json
+++ b/pages/Fileman/alt-fileman/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "icheck-bootstrap": "^3.0.1",
     "json-to-graphql-query": "^2.0.0",
