--- a/acl.yml
+++ b/acl.yml
@@ -20,6 +20,8 @@ path:
   User/v: [Power Users]
   User/e_userlist: [Power Users]
   User/reset_password: [Power Users]
+  Fileman: [Users,Power Users]
+  Fileman/api: [Users,Power Users]
 
 action:
   FC:
