--- a/acl.yml
+++ b/acl.yml
@@ -13,9 +13,12 @@ path:
   Dashboard/holiday: [Power Users,Users]
   Dashboard/weather: [Power Users,Users]
   User: [Power Users]
+  User/ae: [Power Users]
   User/index: [Power Users]
   UserGroup: [Power Users]
+  UserGroup/list: [Power Users]
   UserGroup/ae: [Power Users]
+  UserGroup/index: [Power Users]
   cancel_viewas: [Power Users,Users]
   User/v: [Power Users]
   User/e_userlist: [Power Users]
