--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "mathsgod/gql-php-generator": "^1.0",
         "mathsgod/r-webauthn": "^1.0",
         "mathsgod/date": "^1.0",
-        "mathsgod/hostlink-fileman": "^2.0"
+        "mathsgod/hostlink-fileman": "dev-master"
     },
     "require-dev": {
         "box/spout": "^2.7",
