--- a/pages/Fileman/alt-fileman/package.json
+++ b/pages/Fileman/alt-fileman/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.2",
     "icheck-bootstrap": "^3.0.1",
     "jquery": "^3.5.0",
     "json-to-graphql-query": "^2.0.0",
