--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "http-vue-loader": "^1.4.2",
     "sweetalert2": "^9.10.0",
     "vue-i18n": "^8.17.6",
+    "vue-resource": "^1.5.1",
     "webpack": "^4.41.2",
     "x-html-bs4": "git+https://github.com/mathsgod/x-html-bs4.git"
   },
