--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "mathsgod/r-webauthn": "^1.0",
         "mathsgod/date": "^1.0",
         "mathsgod/hostlink-fileman": "^2.0",
-        "mathsgod/r-db": "^3.5"
+        "mathsgod/r-db": "^3.5",
+        "mathsgod/php-util": "^1.0"
     },
     "require-dev": {
         "box/spout": "^2.7",
