--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
         "mathsgod/hostlink-fileman": "^2.0",
         "mathsgod/r-db": "^3.5",
         "mathsgod/php-util": "^1.0",
-        "phpoffice/phpspreadsheet": "^1.8"
+        "phpoffice/phpspreadsheet": "^1.8",
+        "mathsgod/r-psr7": "^2.5"
     },
     "require-dev": {
         "box/spout": "^2.7",
