--- a/alt-component/package.json
+++ b/alt-component/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mathsgod/vue-gql": "^1.0.3",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.6",
     "vue-register-element": "git+https://github.com/mathsgod/VueRegisterElement.git",
+    "vue-resource": "^1.5.1",
     "vue-select2": "git+https://github.com/mathsgod/vue-select2.git"
   },
   "devDependencies": {
