--- a/alt-component/package.json
+++ b/alt-component/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve --target lib src/main.js --port 8087",
     "build": "vue-cli-service build --target lib src/main.js",
+    "watch": "vue-cli-service build --watch --target lib src/main.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@mathsgod/vue-gql": "^1.0.3",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "tinymce": "^5.4.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.6",
     "vue-register-element": "git+https://github.com/mathsgod/VueRegisterElement.git",
