--- a/acl.yml
+++ b/acl.yml
@@ -25,7 +25,7 @@ path:
   User/reset_password: [Power Users]
   Fileman: [Users,Power Users]
   Fileman/api: [Users,Power Users]
-  System/code: [Users,Power Users]
+  tinymce_code: [Users,Power Users]
   
 action:
   FC:
