--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Raymond framework",
   "main": "src/index.js",
   "dependencies": {
+    "@mathsgod/vue-gql": "^1.0.3",
+    "bootbox": "^5.4.1",
     "element-ui": "^2.13.2",
     "file-loader": "^6.0.0",
     "http-vue-loader": "^1.4.2",
+    "jquery": "^3.5.1",
     "sweetalert2": "^9.17.1",
-    "vue-i18n": "^8.21.0",
-    "vue-resource": "^1.5.1",
     "webpack": "^4.44.1",
     "x-html-bs4": "git+https://github.com/mathsgod/x-html-bs4.git"
   },
@@ -17,7 +18,6 @@
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.2.1",
