--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "phpoffice/phpspreadsheet": "^1.8",
         "mathsgod/php-psr7": "^1.0",
         "endroid/qr-code": "^2.5",
-        "gettext/gettext": "^4.8"
+        "gettext/gettext": "^4.8",
+        "fortawesome/font-awesome": "^5.15"
     },
     "require-dev": {
         "box/spout": "^2.7",
