--- a/alt-component/package.json
+++ b/alt-component/package.json
@@ -17,6 +17,7 @@
     "vue-i18n": "^8.17.6",
     "vue-register-element": "git+https://github.com/mathsgod/VueRegisterElement.git",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.4.9",
     "vue-select2": "git+https://github.com/mathsgod/vue-select2.git"
   },
   "devDependencies": {
