--- a/composer.json
+++ b/composer.json
@@ -46,9 +46,9 @@
         "mathsgod/php-util": "^1.1",
         "phpoffice/phpspreadsheet": "^1.8",
         "mathsgod/php-psr7": "^1.0",
-        "endroid/qr-code": "^2.5",
         "gettext/gettext": "^4.8",
-        "fortawesome/font-awesome": "^5.15"
+        "fortawesome/font-awesome": "^5.15",
+        "endroid/qr-code": "^4.1"
     },
     "require-dev": {
         "box/spout": "^2.7",
