--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,12 @@
     "require": {
         "php": ">=7.0",
         "mathsgod/r": "^3.7",
-        "twig/twig": "^2.12",
+        "twig/twig": "^2.7",
         "firebase/php-jwt": "^5.0",
-        "twig/extensions": "^1.5",
         "mathsgod/alt-app-core": "^1.1",
         "symfony/yaml": "^3.4",
         "mathsgod/html": "^1.0",
-        "mathsgod/p-query": "^2.4",
+        "mathsgod/p-query": "^2.4 | ^3.0",
         "mathsgod/r-graphql": "^1.3",
         "mathsgod/hl-holiday": "^1.2",
         "mathsgod/hl-weather": "^2.0",
@@ -44,15 +43,16 @@
         "mathsgod/hostlink-fileman": "^2.0",
         "mathsgod/r-db": "^3.6",
         "mathsgod/php-util": "^1.1",
-        "phpoffice/phpspreadsheet": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.18",
         "mathsgod/php-psr7": "^1.0",
         "gettext/gettext": "^4.8",
         "fortawesome/font-awesome": "^5.15",
-        "endroid/qr-code": "^4.1"
+        "endroid/qr-code": "^4.1",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "box/spout": "^2.7",
-        "phpunit/phpunit": "^6.5",
+        
         "vakata/jstree": "^3.3",
         "sepia/po-parser": "^5.1",
         "ckeditor/ckeditor": "^4.13",
